# agent-skills

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  py-code-style.yml  py-tests.yml  py-typing.yml  reusable-python.yml
agent_skills/: __init__.py  __version__.py  codegen.py  files.py  helpers.py  manager.py  models.py  server.py  simple.py  toolset.py  types.py
agent_skills/skills/: __init__.py
agent_skills/skills/crawl/: SKILL.md  __init__.py
agent_skills/skills/events/: SKILL.md  __init__.py
agent_skills/skills/events/scripts/: event.py
agent_skills/skills/github/: SKILL.md  __init__.py
agent_skills/skills/github/scripts/: get_repo.py  list_issues.py  list_prs.py  list_repos.py  search_repos.py
agent_skills/skills/pdf/: SKILL.md  __init__.py
agent_skills/skills/text_summarizer/: SKILL.md  __init__.py
agent_skills/skills/text_summarizer/scripts/: summarize.py
docs/: Makefile  README.md  docusaurus.config.js  package.json
docs/docs/: index.mdx
docs/docs/discovery/: _category_.yml  index.mdx
docs/docs/examples/: _category_.yml  index.mdx
docs/docs/getting-started/: index.mdx
docs/docs/integration/: _category_.yml  index.mdx
docs/docs/integrations/: index.mdx
docs/docs/manager/: _category_.yml  index.mdx
docs/docs/packaging/: _category_.yml  index.mdx
docs/docs/patterns/: _category_.yml  index.mdx
examples/: README.md  skills_example.py
examples/simple/: Makefile  README.md  skills_example.py
tests/: __init__.py  conftest.py  test_skills.py  test_toolset.py
