# Copyright (c) 2025-2026 Datalayer, Inc.
#
# BSD 3-Clause License

[build-system]
requires = ["hatchling~=1.21"]
build-backend = "hatchling.build"

[project]
name = "agent_skills"
authors = [{ name = "Datalayer", email = "info@datalayer.io" }]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["Jupyter", "AI", "Agents", "Skills", "MCP", "PydanticAI"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dependencies = [
    "code_sandboxes",
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
    "pydantic-graph",
    "pydantic-ai-slim",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["ipykernel", "jupyter_server>=1.6,<3", "pytest>=7.0", "pytest-asyncio>=0.21"]
lint = ["mdformat>0.7", "mdformat-gfm>=0.3.5", "ruff"]
typing = ["mypy>=0.990"]
# Per-skill runtime dependencies
skills-crawl = ["httpx>=0.27", "beautifulsoup4>=4.12"]
skills-github = ["httpx>=0.27"]
skills-pdf = ["pypdf>=4.0", "pdf2image>=1.17", "Pillow>=10.0"]
# Install all skill dependencies at once
skills = [
    "agent_skills[skills-crawl]",
    "agent_skills[skills-github]",
    "agent_skills[skills-pdf]",
]

[project.license]
file = "LICENSE"

[project.urls]
Home = "https://github.com/datalayer/agent-skills"

[tool.hatch.version]
path = "agent_skills/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agent_skills"]
# Include all non-Python data files (SKILL.md, scripts, etc.) from skills/
artifacts = [
  "agent_skills/skills/**/*.md",
  "agent_skills/skills/**/*.txt",
  "agent_skills/skills/**/scripts/*.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
  "error",
  "ignore:There is no current event loop:DeprecationWarning",
  "module:make_current is deprecated:DeprecationWarning",
  "module:clear_current is deprecated:DeprecationWarning",
  "module:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning",
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
pretty = true
show_error_context = true
show_error_codes = true
strict_equality = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C",
  "E",
  "F",
  "FBT",
  "I",
  "N",
  "Q",
  "RUF",
  "S",
  "T",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # FBT001 Boolean positional arg in function definition
  "FBT001",
  "FBT002",
  "FBT003",
]

[tool.ruff.lint.per-file-ignores]
# S101 Use of `assert` detected
"agent_skills/tests/*" = ["S101"]